# openHollywood

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  QUICKSTART.md  README.md  alembic.ini  demo.py  open_hollywood_future.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/agents/: agent_manager.py
app/core/: llm_provider.py  prompt_builder.py  scene_templates.py
app/models/: __init__.py  types.py
app/orchestrator/: __init__.py  scene_orchestrator.py
apps/api/: README.md  pyproject.toml
apps/api/open_hollywood_api/: __init__.py  app.py  app_metadata.py  blueprint_models.py  dependencies.py  event_models.py  event_stream.py  export_models.py  model_profile_models.py  models.py  run_control_models.py  workspace_models.py
apps/api/open_hollywood_api/persistence/: __init__.py  base.py  database.py  models.py  secret_policy.py
apps/api/open_hollywood_api/routes/: blueprint_decisions.py  exports.py  health.py  model_profiles.py  run_controls.py  workflow_events.py  workspace.py
apps/api/open_hollywood_api/services/: __init__.py  blueprint_workflow.py  exports.py  model_profiles.py  run_controls.py  workflow_events.py  workspace.py
apps/desktop/: README.md
apps/web/: README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/worker/: README.md
docs/: README.md
docs/adr/: 0001-local-first-modular-monolith.md  0002-explicit-durable-workflow-graph.md  0003-sqlite-persistence-for-v0-1.md  0004-provider-neutral-model-gateway.md  0005-versioned-artifacts-and-bounded-context.md  0006-runtime-secret-handles-and-leak-guards.md  README.md
engine/: README.md  pyproject.toml
engine/agents/: README.md
engine/artifacts/: README.md
engine/context/: README.md
engine/evaluations/: README.md
engine/models/: README.md
engine/open_hollywood_engine/: __init__.py
engine/open_hollywood_engine/artifacts/: __init__.py  schemas.py  story_bible.py
engine/open_hollywood_engine/context/: __init__.py  compiler.py  contracts.py
engine/open_hollywood_engine/models/: __init__.py  contracts.py  gateway.py  ollama.py  profiles.py
engine/open_hollywood_engine/rendering/: __init__.py  contracts.py  exports.py  text.py
engine/open_hollywood_engine/secrets/: __init__.py  contracts.py  environment.py  policy.py
engine/open_hollywood_engine/workflows/: __init__.py  blueprint_graph.py  contracts.py  dialogue_contracts.py  dialogue_graph.py  production_contracts.py  production_graph.py  run_controls.py
engine/secrets/: README.md
engine/workflows/: README.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 0001_initial_persistence.py  0002_append_only_workflow_events.py  0003_langgraph_checkpoints.py  0004_human_interrupts.py  0005_workflow_run_controls.py
open_hollywood_bible/: README.md  formatting_strategy.md  guardrails.md  important_decisions.md  memory_and_context_architecture.md  model_configuration.md  open_hollywood_rewrite_report.md  product_contract_and_benchmarks.md  recommended_creative_workflow.md  recommended_tech_stack.md  step_by_step_implementation.md  ui_ux.md  what_fully_agentic_should_mean.md
project_info/: EXTENDING.md  PROJECT_SUMMARY.md  SETUP_CHECKLIST.md  hollywood_architecture.txt  open_hollywood_architecture_v1.txt  open_hollywood_dynamic_characters_architecture_v2.txt  troubleshooting.md
sample_prompts/: director_system_prompt.md
scripts/: export_openapi.py
static/: app.js  style.css
templates/: index.html
tests/: README.md  __init__.py  conftest.py  factories.py  test_director_flow.py
tests/api/: test_app.py  test_blueprint_decisions.py  test_exports.py  test_model_profiles.py  test_run_controls.py  test_workflow_events.py  test_workspace.py
tests/artifacts/: __init__.py  test_schemas.py  test_story_bible.py
tests/context/: __init__.py  test_compiler.py
tests/models/: __init__.py  test_contracts.py  test_ollama_gateway.py  test_profiles.py
(+29 files in other folders)
