[project]
name = "open-hollywood-workspace"
version = "0.0.0"
description = "Local-first agentic creative writing studio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = []

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
