[project]
name = "open-hollywood-workspace"
version = "0.0.0"
description = "Local-first agentic creative writing studio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0",
  "mypy>=1.17.0,<2.0",
  "pytest>=8.4.1,<9.0",
  "ruff>=0.12.4,<1.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.116.1,<1.0",
  "uvicorn[standard]>=0.35.0,<1.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["apps/api"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
