[project]
name = "open-hollywood-workspace"
version = "0.0.0"
description = "Local-first agentic creative writing studio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiosqlite>=0.22.1,<1.0",
  "alembic>=1.16.4,<2.0",
  "httpx>=0.28.1,<1.0",
  "langchain-core>=1.5.0,<2.0",
  "langgraph>=1.2.9,<2.0",
  "langgraph-checkpoint-sqlite>=3.1.0,<4.0",
  "open-hollywood-api",
  "pydantic>=2.13.4,<3.0",
  "sqlalchemy>=2.0.41,<3.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0,<2.0",
  "pytest>=8.4.1,<9.0",
  "ruff>=0.12.4,<1.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.116.1,<1.0",
  "uvicorn[standard]>=0.35.0,<1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
open-hollywood-api = { workspace = true }

[tool.uv.workspace]
members = ["apps/api", "engine"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
