[project]
name = "open-hollywood-api"
version = "0.0.0"
description = "Local FastAPI application for Open Hollywood"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "aiosqlite>=0.22.1,<1.0",
  "anyio>=4.9.0,<5.0",
  "fastapi>=0.116.1,<1.0",
  "langchain-core>=1.5.0,<2.0",
  "langgraph>=1.2.9,<2.0",
  "langgraph-checkpoint-sqlite>=3.1.0,<4.0",
  "open-hollywood-engine",
  "pydantic>=2.13.4,<3.0",
  "sqlalchemy>=2.0.41,<3.0",
  "uvicorn[standard]>=0.35.0,<1.0",
]

[tool.uv.sources]
open-hollywood-engine = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "open_hollywood_api"
module-root = ""
